# Magic-Card-Data-Pull

./: .gitignore  README.md  database.py  db.py  magic-api.py  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
frontend/: package-lock.json
